# backend/src/docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/fulltask": {
+        "/binary/full/": {
             "post": {
-                "description": "Uploads a file and processes it for a full task",
+                "description": "Uploads a file and processes it for a task",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -24,10 +24,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "File uploaded successfully",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/structs.FileTaskResponse"
                         }
                     },
                     "400": {
@@ -45,30 +45,32 @@
                 }
             }
         },
-        "/shorttask": {
+        "/binary/short": {
             "post": {
-                "description": "Uploads a file and processes it for a short task",
+                "description": "Uploads a text and processes it for a task",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
-                    "plain/text"
+                    "application/json"
                 ],
-                "summary": "Upload a file for a short task",
+                "summary": "Upload a text for a short task",
                 "parameters": [
                     {
-                        "type": "file",
-                        "description": "File to upload",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
+                        "description": "Text for a task",
+                        "name": "text",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structs.TextTaskRequest"
+                        }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "File uploaded successfully",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/structs.TextTaskResponse"
                         }
                     },
                     "400": {
@@ -83,6 +85,61 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "messages.MessageResult": {
+            "type": "object",
+            "properties": {
+                "messageText": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "integer"
+                },
+                "submitDate": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "string"
+                }
+            }
+        },
+        "structs.FileTaskResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/messages.MessageResult"
+                    }
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "structs.TextTaskRequest": {
+            "type": "object",
+            "properties": {
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "structs.TextTaskResponse": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
                 }
             }
         }
